--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -32,3 +32,25 @@
     background-color: #4CAF50;
     color: white;
 }
+
+.custom-ui {
+    font-family: Arial,
+        Helvetica,
+        sans-serif;
+    width: 400px;
+    padding: 30px;
+    text-align: left;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 20px 75px rgba(0, 0, 0, 0.13);
+    color: #666;
+}
+
+.react-confirm-alert-button-group {
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 20px;
+}
