--- a/src/styles/user.css
+++ b/src/styles/user.css
@@ -1,7 +1,22 @@
-.wrapAll {}
+.form-over {
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #d1d1d1;
+    border-radius: 5px;
+    margin-top: 50px;
+}
 
-.row {}
+.form-group {
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+}
 
-.label {}
+.form-control {
+    width: calc(100% - 50px);
+}
 
-.input {}
+.form-label {
+    width: 50px !important;
+}
