--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -3,7 +3,7 @@
     font-family: arial, sans-serif;
 }
 
-#students {
+#customer {
     text-align: center;
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
@@ -11,21 +11,21 @@
     width: 100%;
 }
 
-#students td,
-#students th {
+#customer td,
+#customer th {
     border: 1px solid #ddd;
     padding: 8px;
 }
 
-#students tr:nth-child(even) {
+#customer tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 
-#students tr:hover {
+#customer tr:hover {
     background-color: #ddd;
 }
 
-#students th {
+#customer th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: center;
@@ -34,9 +34,7 @@
 }
 
 .custom-ui {
-    font-family: Arial,
-        Helvetica,
-        sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     width: 400px;
     padding: 30px;
     text-align: left;
