--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -1,54 +1,67 @@
+.table {
+  width: 90vw !important;
+  margin-left: auto;
+  margin-right: auto;
+}
 #title {
-    text-align: center;
-    font-family: arial, sans-serif;
+  text-align: center;
+  font-family: arial, sans-serif;
 }
 
 #customer {
-    text-align: center;
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    border: 3px solid #ddd;
-    width: 100%;
+  text-align: center;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  border: 3px solid #ddd;
+  width: 100%;
 }
 
 #customer td,
 #customer th {
-    border: 1px solid #ddd;
-    padding: 8px;
+  border: 1px solid #ddd;
+  padding: 8px;
 }
 
 #customer tr:nth-child(even) {
-    background-color: #f2f2f2;
+  background-color: #f2f2f2;
 }
 
 #customer tr:hover {
-    background-color: #ddd;
+  background-color: #ddd;
 }
 
 #customer th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: center;
-    background-color: #4CAF50;
-    color: white;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #4caf50;
+  color: white;
 }
 
 .custom-ui {
-    font-family: Arial, Helvetica, sans-serif;
-    width: 400px;
-    padding: 30px;
-    text-align: left;
-    background: #fff;
-    border-radius: 10px;
-    box-shadow: 0 20px 75px rgba(0, 0, 0, 0.13);
-    color: #666;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 400px;
+  padding: 30px;
+  text-align: left;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 20px 75px rgba(0, 0, 0, 0.13);
+  color: #666;
 }
 
 .react-confirm-alert-button-group {
-    display: -moz-flex;
-    display: -ms-flex;
-    display: -o-flex;
-    display: flex;
-    justify-content: flex-start;
-    margin-top: 20px;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 20px;
+}
+.pagination {
+  margin-top: 15px;
+  margin-right: 0px !important;
+  margin-left: 68vw !important;
+}
+.paginate {
+  margin-left: 15px;
 }
