--- a/src/styles/user.css
+++ b/src/styles/user.css
@@ -1,22 +1,48 @@
 .form-over {
-    width: 500px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #d1d1d1;
-    border-radius: 5px;
-    margin-top: 50px;
+  width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #d1d1d1;
+  border-radius: 5px;
+  margin-top: 50px;
+  padding-top: 1vh;
 }
 
 .form-group {
-    width: 400px;
-    margin-left: auto;
-    margin-right: auto;
+  width: 400px;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  margin-bottom: 0px !important;
+  padding-top: 15px !important;
 }
 
 .form-control {
-    width: calc(100% - 50px);
+  width: calc(100% - 80px) !important;
 }
 
 .form-label {
-    width: 50px !important;
+  width: 80px !important;
+  text-align: left;
+  margin-top: 8px !important;
+}
+
+.saveBtn {
+  width: 200px !important;
+}
+.help-block {
+  width: 100%;
+  margin-top: 0.25rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.83;
+  letter-spacing: 0.8px;
+  text-align: left;
+  margin-left: 80px;
+  color: #bc0000;
+}
+.is-invalid {
+  border-color: #dc3545 !important;
 }
